--- a/src/main/resources/templates/create_order.html
+++ b/src/main/resources/templates/create_order.html
@@ -4,6 +4,14 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+<meta http-equiv="X-UA-COMPATIBLE" content="IE=edge">
+
+<link rel="stylesheet" type="text/css"
+	href="bootstrap-3.3.7/css/bootstrap.min.css">
+<script src="js/jquery-2.1.4.min.js"></script>
+<script src="bootstrap-3.3.7/js/bootstrap.min.js"></script>
 
 <link rel="stylesheet" href="css/style_mendian.css">
 <!--[if !IE]><!-->
@@ -101,40 +109,51 @@
 }
 </style>
 <script type="text/javascript">
-function toSubmit(){
-	
-	var unitPrice = JSON.parse(decodeURI(getQueryString('product'))).unitPrice;
-	var productName  = JSON.parse(decodeURI(getQueryString('product'))).productName;
-	var id  = JSON.parse(decodeURI(getQueryString('product'))).id;
-	var productUnit = JSON.parse(decodeURI(getQueryString('product'))).productUnit;
-	
-	toOrder(id,productName,unitPrice,productUnit);
-}
+	function toSubmit() {
+		var product = JSON.parse(decodeURI(getQueryString('product')));
 
+		var unitPrice = product.unitPrice;
+		var productName = product.productName;
+		var id = product.id;
+		var productUnit = product.productUnit;
+
+		toOrder(id, productName, unitPrice, productUnit);
+	}
 </script>
 
 </head>
 <body>
-
- <div id='productName'></div>
- <div id='productUnit'></div>
- <div><input type="number" id="number" /></div>
- <div><input type="button" onclick="toSubmit()" value="立即购买"/></div>
+	<br />
+	<form role="form"
+			class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-12 col-md-offset-0 col-lg-12  col-lg-offset-0">
+		<div class="page-header">
+			<h1 id='productName'>
+				
+			</h1>
+		</div>
+		<div class="form-group">
+			<div class="input-group ">
+				<div class="input-group-addon  success">购买数量</div>
+				<input class="form-control" type="number" id="number"
+					placeholder="输入购买数量" />
+			</div>
+		</div>
+		<div class="form-group">
+			<button type='button' class="btn btn-info btn-block"
+				onclick="toSubmit()">立即购买</button>
+		</div>
+	</form>
 </body>
 </html>
 <script type="text/javascript" src="js/module/goods.js"></script>
-<script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
 <script type="text/javascript" src="js/global.js"></script>
 <script type="text/javascript" src="js/util.js"></script>
 <script type="text/javascript" src="js/module/order.js"></script>
 <script type="text/javascript">
-
-
-
 	$(function() {
-		$('#productName').html(JSON.parse(decodeURI(getQueryString('product'))).productName);
-		$('#productUnit').html(JSON.parse(decodeURI(getQueryString('product'))).unitPrice+"/"+JSON.parse(decodeURI(getQueryString('product'))).productUnit);
+		var product = JSON.parse(decodeURI(getQueryString('product')));
+
+		$('#productName').html(product.productName + "&nbsp;<small>" + product.productPrice + "元/" + product.productUnit+ "</small>");
 		//alert(JSON.parse(decodeURI(getQueryString('product'))).productName);
 	});
-	
 </script>
