--- a/src/main/resources/templates/create_order.html
+++ b/src/main/resources/templates/create_order.html
@@ -112,12 +112,12 @@
 	function toSubmit() {
 		var product = JSON.parse(decodeURI(getQueryString('product')));
 
-		var unitPrice = product.unitPrice;
+		var unitPrice = product.productPrice;
 		var productName = product.productName;
 		var id = product.id;
 		var productUnit = product.productUnit;
 
-		toOrder(id, productName, unitPrice, productUnit);
+		toOrder(id, productName, $('#number').val(), unitPrice, productUnit, $('#contact').val(), $('#address').val(), $('#remark').val());
 	}
 </script>
 
@@ -139,6 +139,27 @@
 			</div>
 		</div>
 		<div class="form-group">
+			<div class="input-group ">
+				<div class="input-group-addon  success">联系方式</div>
+				<input class="form-control" id="contact"
+					placeholder="输入联系方式" />
+			</div>
+		</div>
+		<div class="form-group">
+			<div class="input-group ">
+				<div class="input-group-addon  success">收货地址</div>
+				<textarea class="form-control" id="address"
+					placeholder="输入收货地址" rows="5"></textarea>
+			</div>
+		</div>
+		<div class="form-group">
+			<div class="input-group ">
+				<div class="input-group-addon  success">备注信息</div>
+				<input class="form-control" id="remark"
+					placeholder="输入备注信息" />
+			</div>
+		</div>
+		<div class="form-group">
 			<button type='button' class="btn btn-info btn-block"
 				onclick="toSubmit()">立即购买</button>
 		</div>
@@ -152,8 +173,7 @@
 <script type="text/javascript">
 	$(function() {
 		var product = JSON.parse(decodeURI(getQueryString('product')));
-
-		$('#productName').html(product.productName + "&nbsp;<small>" + product.productPrice + "元/" + product.productUnit+ "</small>");
+		$('#productName').html(product.productName + "&nbsp;<small>" + product.productPrice + "元/" + product.productUnit+ "&nbsp;(库存: " + product.productNum + " 件)</small>");
 		//alert(JSON.parse(decodeURI(getQueryString('product'))).productName);
 	});
 </script>
