--- a/src/main/resources/templates/getGoods.html
+++ b/src/main/resources/templates/getGoods.html
@@ -132,7 +132,7 @@ text-align: center;
 	<!-- 	<div id="page-wrap"> -->
 	<div class="container">
 	<br />
-		<button type='button' class='btn btn-info' onclick="getOrder(20,1);">查看我的订单</button>
+		<button type='button' class='btn btn-info' onclick="javascript:window.location.href='my_orders.html';">查看我的订单</button>
 		<br /> <br />
 		<table id="myTable"
 			class="table table-striped table-hover table-bordered">
