--- a/src/main/resources/templates/my_orders.html
+++ b/src/main/resources/templates/my_orders.html
@@ -12,6 +12,13 @@
 	href="bootstrap-3.3.7/css/bootstrap.min.css">
 <script src="js/jquery-2.1.4.min.js"></script>
 <script src="bootstrap-3.3.7/js/bootstrap.min.js"></script>
+<script src="js/util.js"></script>
+
+<script src="js/loading/jquery.mloading.js"></script>
+<link rel="stylesheet" href="js/loading/jquery.mloading.css"
+	type="text/css" />
+<script src="layui/layui.js"></script>
+<link rel="stylesheet" href="layui/layui.css" type="text/css" />
 
 <style type="text/css">
 .table th, .table td {
@@ -20,20 +27,16 @@
 }
 </style>
 <script type="text/javascript">
-	function addMenDian() {
-		window.location.href = "./addMenDian.html";
-	}
-
-	function getAllStore(num) {
-		getStore(num);
-	}
+	
 </script>
 </head>
 <body onload="getMyOrders(1);">
 	<!-- 	<input type="button" class="button05" value="添加门店" -->
 	<!-- 		onclick="addMenDian();" /> -->
 	<div class="container">
-		<br/>
+		<br />
+		<h3>我的订单</h3>
+		<br />
 		<table id="myTable"
 			class="table table-striped table-hover table-bordered">
 			<!-- 		<table id="myTable"   -->
@@ -44,7 +47,7 @@
 					<th class="col-xs-1">编号</th>
 					<th class="col-xs-5">商品</th>
 					<th class="col-xs-2">数量</th>
-					<th class="col-xs-2">总价</th>
+					<th class="col-xs-2">总价(单位: 元)</th>
 					<th class="col-xs-1">状态</th>
 					<th class="col-xs-1">操作</th>
 				</tr>
