--- a/src/main/resources/templates/my_order_detail.html
+++ b/src/main/resources/templates/my_order_detail.html
@@ -24,7 +24,8 @@
 }
 </style>
 <script type="text/javascript">
-	
+	var details = JSON.parse(decodeURI(getQueryString('details')));
+	alert(details[0].productName);
 </script>
 </head>
 <body onload="getMyOrders(1);">
@@ -43,10 +44,9 @@
 				<tr>
 					<th class="col-xs-1">编号</th>
 					<th class="col-xs-5">商品</th>
+					<th class="col-xs-2">单价(单位: 元)</th>
 					<th class="col-xs-2">数量</th>
 					<th class="col-xs-2">总价(单位: 元)</th>
-					<th class="col-xs-1">状态</th>
-					<th class="col-xs-1">操作</th>
 				</tr>
 			</thead>
 			<tbody id="tb">
