--- a/src/main/resources/templates/getGoods.html
+++ b/src/main/resources/templates/getGoods.html
@@ -11,7 +11,10 @@
 	href="bootstrap-3.3.7/css/bootstrap.min.css">
 <script src="js/jquery-2.1.4.min.js"></script>
 <script src="bootstrap-3.3.7/js/bootstrap.min.js"></script>
-
+<script src="js/util.js"></script>
+<script src="js/loading/jquery.mloading.js"></script>
+<link rel="stylesheet" href="js/loading/jquery.mloading.css"
+	type="text/css" />
 <!--[if !IE]><!-->
 <style type="text/css">
 
@@ -24,13 +27,11 @@
 /* 	and (max-device-width: 1024px) { */
 /* 	/* Force table to not be like tables anymore */
 
-
 /* 	table, thead, tbody, th, td, tr { */
 /* 		display: block; */
 /* 	} */
 
 /* 	/* Hide table headers (but not display: none;, for accessibility) */
- 
 
 /* 	thead tr { */
 /* 		position: absolute; */
@@ -42,7 +43,6 @@
 /* 	} */
 /* 	td { */
 /* 		/* Behave  like a "row" */
- 
 
 /* 		border: none; */
 /* 		border-bottom: 1px solid #eee; */
@@ -51,11 +51,9 @@
 /* 	} */
 /* 	td:before { */
 /* 		/* Now like a table header */
- 
 
 /* 		position: absolute; */
 /* 		/* Top/left values mimic padding */
- 
 
 /* 		top: 6px; */
 /* 		left: 6px; */
@@ -67,7 +65,6 @@
 /* 	/* */
 /* 		Label the data */
 /* 		*/
- 
 
 /* 	td:nth-of-type(1):before { */
 /* 		content: "姓名"; */
@@ -102,7 +99,6 @@
 /* } */
 
 /* /* Smartphones (portrait and landscape) ----------- */
- 
 
 /* @media only screen and (min-device-width : 320px) and (max-device-width */
 /* 	: 480px) { */
@@ -113,7 +109,6 @@
 /* } */
 
 /* /* iPads (portrait and landscape) ----------- */
- 
 
 /* @media only screen and (min-device-width: 768px) and (max-device-width: */
 /* 	1024px) { */
@@ -121,18 +116,21 @@
 /* 		width: 100%; */
 /* 	} */
 /* } */
-.table th, .table td { 
-text-align: center;
- vertical-align: middle!important; 
+.table th, .table td {
+	text-align: center;
+	vertical-align: middle !important;
 }
 </style>
+
+
 
 </head>
 <body onload="getGoods(1)">
 	<!-- 	<div id="page-wrap"> -->
 	<div class="container">
-	<br />
-		<button type='button' class='btn btn-info' onclick="javascript:window.location.href='my_orders.html';">查看我的订单</button>
+		<br />
+		<button type='button' class='btn btn-info'
+			onclick="javascript:window.location.href='my_orders.html';">查看我的订单</button>
 		<br /> <br />
 		<table id="myTable"
 			class="table table-striped table-hover table-bordered">
@@ -155,7 +153,7 @@ text-align: center;
 
 	</div>
 </body>
-</html>
 <script type="text/javascript" src="js/module/goods.js"></script>
 <script type="text/javascript" src="js/module/order.js"></script>
 <script type="text/javascript" src="js/global.js"></script>
+</html>
