--- a/src/main/resources/templates/my_orders.html
+++ b/src/main/resources/templates/my_orders.html
@@ -45,7 +45,7 @@
 				<tr class="info">
 					<th class="col-xs-1">编号</th>
 					<th class="col-xs-5">商品</th>
-					<th class="col-xs-2">数量</th>
+					<th class="col-xs-2">商品种类数</th>
 					<th class="col-xs-2">总价(单位: 元)</th>
 					<th class="col-xs-1">状态</th>
 					<th class="col-xs-1">操作</th>
