--- a/src/main/resources/templates/my_order_detail.html
+++ b/src/main/resources/templates/my_order_detail.html
@@ -30,7 +30,7 @@
 	<!-- 		onclick="addMenDian();" /> -->
 	<div class="container">
 		<br />
-		<h3>订单详情</h3>
+		<h3  ><span>订单详情</span><span id="status" class="pull-right label label-success"></span></h3>
 		<br />
 		<table id="myTable"
 			class="table table-striped table-hover table-bordered">
@@ -40,7 +40,7 @@
 				<tr class="info">
 					<th class="col-xs-1">编号</th>
 					<th class="col-xs-5">商品</th>
-					<th class="col-xs-2">单价(单位: 元)</th>
+					<th class="col-xs-2">单价</th>
 					<th class="col-xs-2">数量</th>
 					<th class="col-xs-2">总价(单位: 元)</th>
 				</tr>
@@ -49,6 +49,9 @@
 
 			</tbody>
 		</table>
+		<h4 id='total-price' class='text-danger'>
+				
+		</h4>
 		<address id="addr">
 		</address>
 	</div>
@@ -57,8 +60,7 @@
 <script type="text/javascript" src="js/global.js"></script>
 <script type="text/javascript" src="js/module/my_order_detail.js"></script>
 <script type="text/javascript">
-	initData(JSON.parse(decodeURI(getQueryString('order'))), getQueryString('totalPrice'), decodeURI(getQueryString('status')),
-			JSON.parse(decodeURI(getQueryString('details'))));
+	initData(JSON.parse(decodeURI(getQueryString('order'))));
 </script>
 </html>
 
