--- a/src/main/resources/templates/my_orders.html
+++ b/src/main/resources/templates/my_orders.html
@@ -13,7 +13,7 @@
 <script src="js/jquery-2.1.4.min.js"></script>
 <script src="bootstrap-3.3.7/js/bootstrap.min.js"></script>
 <script src="js/util.js"></script>
-
+<script src="bootstrap-3.3.7/js/jquery.simplePagination.js"></script>
 <script src="js/loading/jquery.mloading.js"></script>
 <link rel="stylesheet" href="js/loading/jquery.mloading.css"
 	type="text/css" />
@@ -55,6 +55,10 @@
 
 			</tbody>
 		</table>
+			<nav aria-label="Page navigation" style="text-align: center">
+			<ul class="pagination" id="pagination">
+			</ul>
+		</nav>
 	</div>
 	<!-- 	</div> -->
 </body>
