--- a/src/main/resources/templates/getGoods.html
+++ b/src/main/resources/templates/getGoods.html
@@ -12,6 +12,7 @@
 <script src="js/jquery-2.1.4.min.js"></script>
 <script src="bootstrap-3.3.7/js/bootstrap.min.js"></script>
 <script src="js/util.js"></script>
+<script src="bootstrap-3.3.7/js/jquery.simplePagination.js"></script>
 <script src="js/loading/jquery.mloading.js"></script>
 <link rel="stylesheet" href="js/loading/jquery.mloading.css"
 	type="text/css" />
@@ -50,8 +51,10 @@
 			</tbody>
 		</table>
 
-		<!-- 	<div class="ad_76090"><script src="/js/ad_js/bd_76090.js" type="text/javascript"></script></div><br/> -->
-
+		<nav aria-label="Page navigation" style="text-align: center">
+			<ul class="pagination" id="pagination">
+			</ul>
+		</nav>
 	</div>
 </body>
 <script type="text/javascript" src="js/module/goods.js"></script>
