--- a/src/main/resources/templates/store/create_order.html
+++ b/src/main/resources/templates/store/create_order.html
@@ -40,7 +40,7 @@
 			<!-- Content Header (Page header) -->
 			<section class="content-header">
 				<h1>
-					门店管理
+					立即购买
 					<!--         <small>Preview</small> -->
 				</h1>
 				<ol class="breadcrumb">
@@ -53,15 +53,29 @@
 			<!-- Main content -->
 			<section class="content">
 				<div class="row">
-					<div class="page-header">
-						<h1 id='productName'></h1>
+					<div class="col-lg-3 col-xs-6">
+						<!-- small box -->
+						<div class="small-box bg-green">
+							<div class="inner">
+								<h3 id='productName'></h3>
+
+								<p id="product-stock"></p>
+							</div>
+							<div class="icon">
+								<i class="ion ion-bag"></i>
+							</div>
+<!-- 							<a href="#" class="small-box-footer">More info <i -->
+<!-- 								class="fa fa-arrow-circle-right"></i></a> -->
+						</div>
 					</div>
+				</div>
+				<div class="row">
 					<!-- left column -->
 					<div class="col-xs-12">
 						<!-- Input addon -->
-						<div class="box box-primary">
+						<div class="box box-success">
 							<div class="box-header with-border">
-								<h3 class="box-title">添加门店</h3>
+								<h3 class="box-title">订单信息</h3>
 							</div>
 							<div class="box-body">
 								<div class="form-group">
@@ -91,7 +105,7 @@
 									</div>
 								</div>
 								<div class="form-group">
-									<button type='button' class="btn btn-info btn-block"
+									<button type='button' class="btn btn-success btn-block btn-flat"
 										onclick="toSubmit()">立即购买</button>
 								</div>
 
@@ -142,24 +156,24 @@
 	<script type="text/javascript" src="../js/module/order.js"></script>
 	<!-- Page-Level Demo Scripts - Forms - Use for reference -->
 	<script type="text/javascript">
-	function toSubmit() {
-		var product = JSON.parse(decodeURI(getQueryString('product')));
+		function toSubmit() {
+			var product = JSON.parse(decodeURI(getQueryString('product')));
 
-		var unitPrice = product.productPrice;
-		var productName = product.productName;
-		var id = product.id;
-		var productUnit = product.productUnit;
+			var unitPrice = product.productPrice;
+			var productName = product.productName;
+			var id = product.id;
+			var productUnit = product.productUnit;
 
-		toOrder(id, $('#number').val(), $('#contact').val(), $('#address').val(), $('#remark').val());
-	}
+			toOrder(id, $('#number').val(), $('#contact').val(), $('#address')
+					.val(), $('#remark').val());
+		}
 
 		$(function() {
 			var product = JSON.parse(decodeURI(getQueryString('product')));
 			$('#productName').html(
-					product.productName + "&nbsp;<small>"
-							+ product.productPrice + "元/" + product.productUnit
-							+ "&nbsp;(库存: " + product.productNum
-							+ " 件)</small>");
+					product.productName + "&nbsp;<small class='text-yellow'>" + product.productPrice + "元/" + product.productUnit+ "</small>");
+			$('#product-stock').html("库存: "+product.productNum
+					+ " 件");
 			//alert(JSON.parse(decodeURI(getQueryString('product'))).productName);
 		});
 	</script>
