--- a/src/main/resources/templates/store/home.html
+++ b/src/main/resources/templates/store/home.html
@@ -61,7 +61,7 @@
     <section class="content">
       <div class="row">
         <div class="col-xs-12">
-          <div class="box box-primary">
+          <div class="box box-success">
             <div class="box-header with-border">
               <h3 class="box-title">列表</h3>
             </div>
@@ -69,11 +69,11 @@
             <div class="box-body">
               <table class="table table-bordered table-hover">
                <thead>
-				<tr class="info">
-					<th class="col-xs-5">商品名称</th>
+				<tr>
+					<th class="col-xs-1">编号</th>
+					<th class="col-xs-4">商品名称</th>
 					<th class="col-xs-4">产地</th>
-					<th class="col-xs-2">单价 (元)</th>
-					<!-- 					<th>单位</th> -->
+					<th class="col-xs-2">单价</th>
 					<th class="col-xs-1">操作</th>
 				</tr>
 			</thead>
