--- a/src/main/resources/templates/store/my_orders.html
+++ b/src/main/resources/templates/store/my_orders.html
@@ -63,15 +63,15 @@
     <section class="content">
       <div class="row">
         <div class="col-xs-12">
-          <div class="box box-primary">
+          <div class="box box-success">
             <div class="box-header with-border">
-              <h3 class="box-title">全部门店</h3>
+              <h3 class="box-title">全部订单</h3>
             </div>
             <!-- /.box-header -->
             <div class="box-body">
               <table class="table table-bordered table-hover">
                 <thead>
-				<tr class="info">
+				<tr>
 					<th class="col-xs-1">编号</th>
 					<th class="col-xs-5">商品</th>
 					<th class="col-xs-2">商品种类数</th>
@@ -123,8 +123,8 @@
 	loadHeader();
 	loadFooter();
 	loadNav();
-	navActive($('#store-li'));
-	navActive($('#stores-li'));
+// 	navActive($('#store-li'));
+// 	navActive($('#stores-li'));
 </script>
 <!-- AdminLTE App -->
 <script src="./dist/js/adminlte.js"></script>
