--- a/src/main/resources/templates/store/create_order.html
+++ b/src/main/resources/templates/store/create_order.html
@@ -45,8 +45,7 @@
 				</h1>
 				<ol class="breadcrumb">
 					<li><a href="home.html"><i class="fa fa-home"></i> 首页</a></li>
-					<li>门店管理</li>
-					<li class="active">添加门店</li>
+					<li class="active">立即购买</li>
 				</ol>
 			</section>
 
