--- a/src/main/resources/templates/store/my_order_detail.html
+++ b/src/main/resources/templates/store/my_order_detail.html
@@ -55,7 +55,7 @@
       <ol class="breadcrumb">
         <li><a href="home.html"><i class="fa fa-home"></i> 首页</a></li>
         <li>订单管理</li>
-        <li>我的订单</li>
+        <li><a href="my_orders.html">我的订单</a></li>
         <li class="active">订单详情</li>
       </ol>
     </section>
@@ -72,7 +72,7 @@
             <div class="box-body">
               <table class="table table-bordered table-hover">
                <thead>
-				<tr class="info">
+				<tr>
 					<th class="col-xs-1">编号</th>
 					<th class="col-xs-5">商品</th>
 					<th class="col-xs-2">单价</th>
