--- a/src/main/resources/templates/store/create_order.html
+++ b/src/main/resources/templates/store/create_order.html
@@ -52,7 +52,7 @@
 			<!-- Main content -->
 			<section class="content">
 				<div class="row">
-					<div class="col-lg-3 col-xs-6">
+					<div class="col-xs-12">
 						<!-- small box -->
 						<div class="small-box bg-green">
 							<div class="inner">
