--- a/src/main/resources/templates/store/header.html
+++ b/src/main/resources/templates/store/header.html
@@ -2,7 +2,7 @@
 <!-- Logo -->
 <a href="home.html" class="logo"> <!-- mini logo for sidebar mini 50x50 pixels -->
 	<span class="logo-mini"><b>门店</b></span> <!-- logo for regular state and mobile devices -->
-	<span class="logo-lg"><b>小河农场</b></span>
+	<span class="logo-lg"><b>小和农场</b></span>
 </a>
 <!-- Header Navbar: style can be found in header.less -->
 <nav class="navbar navbar-static-top">
@@ -48,5 +48,5 @@
 <script src="./js/module/user.js"></script>
 
 <script>
-	$('#username-title').html($.cookie("username"));
+	$('#username-title').html($.cookie("username") + "&nbsp;&nbsp;¥" + $.cookie("balance"));
 </script>
