--- a/src/main/resources/templates/store/home.html
+++ b/src/main/resources/templates/store/home.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>商品列表 - 小河农场</title>
+  <title>商品列表 - 小和农场</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <!-- Bootstrap 3.3.7 -->
@@ -80,9 +80,10 @@
 				<tr>
 					<th class="col-xs-1">编号</th>
 					<th class="col-xs-4">商品名称</th>
-					<th class="col-xs-4">产地</th>
+					<th class="col-xs-3">产地</th>
 					<th class="col-xs-2">单价</th>
-					<th class="col-xs-1">操作</th>
+					<th class="col-xs-2">库存</th>
+<!-- 					<th class="col-xs-1">操作</th> -->
 				</tr>
 			</thead>
 			<tbody id="tb">
