--- a/src/main/resources/templates/store/header.html
+++ b/src/main/resources/templates/store/header.html
@@ -14,9 +14,9 @@
 	<div class="navbar-custom-menu">
 		<ul class="nav navbar-nav">
 			<!-- Messages: style can be found in dropdown.less-->
-			<li class="dropdown messages-menu"><a href="my_orders.html"> <i
-					class="fa fa-files-o"></i> 我的订单
-			</a></li>
+			<li class="dropdown messages-menu">
+				<a href="my_orders.html"><i class="fa fa-files-o"></i> 我的订单</a>
+			</li>
 			<!-- User Account: style can be found in dropdown.less -->
 			<li class="dropdown user user-menu"><a href="#"
 				class="dropdown-toggle" data-toggle="dropdown"> <!--               <img src="dist/img/user2-160x160.jpg" class="user-image" alt="User Image"> -->
@@ -25,6 +25,16 @@
 			</a>
 				<ul class="dropdown-menu">
 					<!-- User image -->
+					<!-- Menu Body -->
+              <li class="user-header" style="height:80px;">
+              	<p id="header-p">
+                  
+                </p>
+<!--               <div class="row"> -->
+<!--                	<span class="pull-left"><a href="#" id="username-span" ></a></span> -->
+<!--                 <span class="pull-right"><a href="#"  id="balance-span"></a></span> -->
+<!--                 </div> -->
+              </li>
 					<!-- Menu Footer-->
 					<li class="user-footer">
 						<!--                 <div class="pull-left"> --> <!--                   <a href="#" class="btn btn-default btn-flat">Profile</a> -->
@@ -48,5 +58,10 @@
 <script src="./js/module/user.js"></script>
 
 <script>
-	$('#username-title').html($.cookie("username") + "&nbsp;&nbsp;¥" + $.cookie("balance"));
+	var username = $.cookie("username");
+	var balance = $.cookie("balance");
+	$('#username-title').html($.cookie("username") + "&nbsp;&nbsp;¥" + balance);
+// 	$('#username-span').html(username);
+// 	$('#balance-span').html("余额:&nbsp;&nbsp;¥" + balance);
+	$('#header-p').html(username + "<small>余额:&nbsp;&nbsp;¥" + balance + "</small>");
 </script>
