--- a/src/main/resources/templates/store/my_orders.html
+++ b/src/main/resources/templates/store/my_orders.html
@@ -73,8 +73,8 @@
                 <thead>
 				<tr>
 					<th class="col-xs-1">编号</th>
-					<th class="col-xs-3">商品</th>
-					<th class="col-xs-2">商品种类数</th>
+					<th class="col-xs-4">商品</th>
+					<th class="col-xs-1">种类数</th>
 					<th class="col-xs-2">总价(单位: 元)</th>
 					<th class="col-xs-1">状态</th>
 					<th class="col-xs-2">创建时间</th>
