产品增加零售价字段

--- a/src/main/resources/templates/store/home.html
+++ b/src/main/resources/templates/store/home.html
@@ -79,9 +79,10 @@
                <thead>
 				<tr>
 					<th class="col-xs-1">编号</th>
-					<th class="col-xs-4">商品名称</th>
-					<th class="col-xs-3">产地</th>
+					<th class="col-xs-5">商品名称</th>
+<!-- 					<th class="col-xs-3">产地</th> -->
 					<th class="col-xs-2">单价</th>
+					<th class="col-xs-2">零售价</th>
 					<th class="col-xs-2">库存</th>
 <!-- 					<th class="col-xs-1">操作</th> -->
 				</tr>
