--- a/src/main/resources/templates/store/my_orders.html
+++ b/src/main/resources/templates/store/my_orders.html
@@ -74,11 +74,11 @@
 				<tr>
 					<th class="col-xs-1">编号</th>
 					<th class="col-xs-4">商品</th>
-					<th class="col-xs-1">种类数</th>
+<!-- 					<th class="col-xs-1">种类数</th> -->
 					<th class="col-xs-2">总价(单位: 元)</th>
-					<th class="col-xs-1">状态</th>
-					<th class="col-xs-2">创建时间</th>
-					<th class="col-xs-1">操作</th>
+<!-- 					<th class="col-xs-1">状态</th> -->
+					<th class="col-xs-3">创建时间</th>
+					<th class="col-xs-2">操作</th>
 				</tr>
 			</thead>
 			<tbody id="tb">
