--- a/src/main/resources/templates/store/my_orders.html
+++ b/src/main/resources/templates/store/my_orders.html
@@ -1,33 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>我的订单 - 小和农场</title>
-  <!-- Tell the browser to be responsive to screen width -->
-  <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-  <!-- Bootstrap 3.3.7 -->
-  <link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap.css">
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="./bower_components/font-awesome/css/font-awesome.min.css">
-  <!-- Ionicons -->
-  <link rel="stylesheet" href="./bower_components/Ionicons/css/ionicons.min.css">
-  <!-- Theme style -->
-  <link rel="stylesheet" href="./dist/css/AdminLTE.css">
-  <!-- AdminLTE Skins. Choose a skin from the css/skins
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>我的订单 - 小和农场</title>
+<!-- Tell the browser to be responsive to screen width -->
+<meta
+	content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+	name="viewport">
+<!-- Bootstrap 3.3.7 -->
+<link rel="stylesheet"
+	href="./bower_components/bootstrap/dist/css/bootstrap.css">
+<!-- Font Awesome -->
+<link rel="stylesheet"
+	href="./bower_components/font-awesome/css/font-awesome.min.css">
+<!-- Ionicons -->
+<link rel="stylesheet"
+	href="./bower_components/Ionicons/css/ionicons.min.css">
+<!-- Theme style -->
+<link rel="stylesheet" href="./dist/css/AdminLTE.css">
+<!-- AdminLTE Skins. Choose a skin from the css/skins
        folder instead of downloading all of them to reduce the load. -->
-  <link rel="stylesheet" href="./dist/css/skins/_all-skins.min.css">
-  <link rel="stylesheet" href="./js/loading/jquery.mloading.css"/>
-  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
+<link rel="stylesheet" href="./dist/css/skins/_all-skins.min.css">
+<link rel="stylesheet" href="./js/loading/jquery.mloading.css" />
+<link type="text/css"
+	href="./datetimepicker/bootstrap-datetimepicker.min.css"
+	rel="stylesheet" />
+
+<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+<!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
 
-  <!-- Google Font -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
-	<style type="text/css">
+<!-- Google Font -->
+<link rel="stylesheet"
+	href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
+<style type="text/css">
 .table th, .table td {
 	text-align: center;
 	vertical-align: middle !important;
@@ -35,113 +45,133 @@
 </style>
 </head>
 <body class="hold-transition skin-green sidebar-mini">
-<div class="wrapper">
+	<div class="wrapper">
 
-<header id="header" class="main-header">
-</header>
- <aside id="nav" class="main-sidebar">
-  <!-- Left side column. contains the logo and sidebar -->
+		<header id="header" class="main-header"> </header>
+		<aside id="nav" class="main-sidebar">
+			<!-- Left side column. contains the logo and sidebar -->
 
- </aside> 
+		</aside>
 
-  <!-- Content Wrapper. Contains page content -->
-  <div class="content-wrapper">
-    <!-- Content Header (Page header) -->
-    <section class="content-header">
-      <h1>
-        	我的订单
-<!--         <small>preview of simple tables</small> -->
-      </h1>
-      <ol class="breadcrumb">
-        <li><a href="home.html"><i class="fa fa-home"></i> 首页</a></li>
-        <li>订单管理</li>
-        <li class="active">我的订单</li>
-      </ol>
-    </section>
+		<!-- Content Wrapper. Contains page content -->
+		<div class="content-wrapper">
+			<!-- Content Header (Page header) -->
+			<section class="content-header">
+				<h1>
+					我的订单
+					<!--         <small>preview of simple tables</small> -->
+				</h1>
+				<ol class="breadcrumb">
+					<li><a href="home.html"><i class="fa fa-home"></i> 首页</a></li>
+					<li>订单管理</li>
+					<li class="active">我的订单</li>
+				</ol>
+			</section>
 
-    <!-- Main content -->
-    <section class="content">
-      <div class="row">
-        <div class="col-xs-12">
-          <div class="box box-success">
-            <div class="box-header with-border">
-              <h3 class="box-title">全部订单</h3>
-            </div>
-            <!-- /.box-header -->
-            <div class="box-body">
-              <table class="table table-bordered table-hover">
-                <thead>
-				<tr>
-					<th class="col-xs-1">编号</th>
-					<th class="col-xs-4">商品</th>
-<!-- 					<th class="col-xs-1">种类数</th> -->
-					<th class="col-xs-2">总价(单位: 元)</th>
-<!-- 					<th class="col-xs-1">状态</th> -->
-					<th class="col-xs-3">创建时间</th>
-					<th class="col-xs-2">操作</th>
-				</tr>
-			</thead>
-			<tbody id="tb">
+			<!-- Main content -->
+			<section class="content">
+				<div class="row">
+					<div class="col-xs-12">
+						<div class="box box-success">
+							<div class="box-header with-border">
+								<form role="form" class="form-inline">
+									<div class="form-group">
+										<div class="input-group ">
+											<div class="input-group-addon  success">配货时间</div>
+											<input id="datetimepicker" class="form-control" type="text"
+												value="" readonly> <span class="add-on"><i
+												class="icon-th"></i></span>
+										</div>
+									</div>
+								</form>
+							</div>
+							<!-- /.box-header -->
+							<div class="box-body">
+								<table class="table table-bordered table-hover">
+									<thead>
+										<tr>
+											<th class="col-xs-1">编号</th>
+											<th class="col-xs-4">商品</th>
+											<!-- 					<th class="col-xs-1">种类数</th> -->
+											<th class="col-xs-2">总价(单位: 元)</th>
+											<!-- 					<th class="col-xs-1">状态</th> -->
+											<th class="col-xs-3">创建时间</th>
+											<th class="col-xs-2">操作</th>
+										</tr>
+									</thead>
+									<tbody id="tb">
 
-			</tbody>
-              </table>
-            </div>
-            <!-- /.box-body -->
-            <div class="box-footer clearfix">
-              <nav aria-label="Page navigation" style="text-align: center;">
-			<ul class="pagination" id="pagination" style="background-color:#ff0000;">
-			</ul>
-			</nav>  
-            </div>
-          </div>
-          <!-- /.box -->
-            <!-- /.box-body -->
-          </div>
+									</tbody>
+								</table>
+							</div>
+							<!-- /.box-body -->
+							<div class="box-footer clearfix">
+								<nav aria-label="Page navigation" style="text-align: center;">
+									<ul class="pagination" id="pagination"
+										style="background-color: #ff0000;">
+									</ul>
+								</nav>
+							</div>
+						</div>
+						<!-- /.box -->
+						<!-- /.box-body -->
+					</div>
 
-      </div>
-    </section>
-    <!-- /.content -->
-  </div>
-  <!-- /.content-wrapper -->
-  <footer id="footer-container" class="main-footer">
-   
-  </footer>
-  <div class="control-sidebar-bg"></div>
-</div>
-<!-- ./wrapper -->
+				</div>
+			</section>
+			<!-- /.content -->
+		</div>
+		<!-- /.content-wrapper -->
+		<footer id="footer-container" class="main-footer"> </footer>
+		<div class="control-sidebar-bg"></div>
+	</div>
+	<!-- ./wrapper -->
 
-<!-- jQuery 3 -->
-<script src="./bower_components/jquery/dist/jquery.min.js"></script>
-<!-- Bootstrap 3.3.7 -->
-<script src="./bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-<!-- Slimscroll -->
-<script src="./bower_components/jquery-slimscroll/jquery.slimscroll.min.js"></script>
-<!-- FastClick -->
-<script src="./bower_components/fastclick/lib/fastclick.js"></script>
+	<!-- jQuery 3 -->
+	<script src="./bower_components/jquery/dist/jquery.min.js"></script>
+	<!-- Bootstrap 3.3.7 -->
+	<script src="./bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+	<!-- Slimscroll -->
+	<script
+		src="./bower_components/jquery-slimscroll/jquery.slimscroll.min.js"></script>
+	<!-- FastClick -->
+	<script src="./bower_components/fastclick/lib/fastclick.js"></script>
 
-<script src="./js/util.js"></script>
-<script type="text/javascript">
-	loadHeader();
-	loadFooter();
-	loadNav();
-// 	navActive($('#store-li'));
-// 	navActive($('#stores-li'));
-</script>
-<!-- AdminLTE App -->
-<script src="./dist/js/adminlte.js"></script>
-<!-- AdminLTE for demo purposes -->
-<script src="./dist/js/demo.js"></script>
+	<script src="./js/util.js"></script>
+	<script type="text/javascript">
+		loadHeader();
+		loadFooter();
+		loadNav();
+		// 	navActive($('#store-li'));
+		// 	navActive($('#stores-li'));
+	</script>
+	<!-- AdminLTE App -->
+	<script src="./dist/js/adminlte.js"></script>
+	<!-- AdminLTE for demo purposes -->
+	<script src="./dist/js/demo.js"></script>
 
-<script src="./bootstrap-3.3.7/js/jquery.simplePagination.js"></script>
-<script src="./js/loading/jquery.mloading.js"></script>
-<script src="./js/module/my_orders.js"></script>
-    <!-- Page-Level Demo Scripts - Tables - Use for reference -->
-    <script>
-	    $(document).ready(function() {
-	        //$('#dataTables-example').dataTable();
-	        //$('#product-li').toggleClass('active').children('ul').collapse('toggle');
-	    	getMyOrders(1);
-	    });
-    </script>
+	<script src="./bootstrap-3.3.7/js/jquery.simplePagination.js"></script>
+	<script src="./js/loading/jquery.mloading.js"></script>
+	<script src="./datetimepicker/bootstrap-datetimepicker.min.js"></script>
+	<script
+		src="./datetimepicker/locales/bootstrap-datetimepicker.zh-CN.js"></script>
+	<script src="./js/module/my_orders.js"></script>
+	<!-- Page-Level Demo Scripts - Tables - Use for reference -->
+	<script>
+		$(document).ready(function() {
+			//$('#dataTables-example').dataTable();
+			//$('#product-li').toggleClass('active').children('ul').collapse('toggle');
+			$("#datetimepicker").datetimepicker({
+				format : 'yyyy-mm-dd',
+				minView : "month",
+				weekStart : 1,
+				todayBtn : true,
+				clearBtn: true,
+				autoclose : true,
+				language : 'zh-CN'
+			});
+			getMyOrders(1);
+		});
+	</script>
 </body>
 </html>
