--- a/src/main/resources/templates/store/my_orders.html
+++ b/src/main/resources/templates/store/my_orders.html
@@ -75,15 +75,18 @@
 						<div class="box box-success">
 							<div class="box-header with-border">
 								<form role="form" class="form-inline">
-									<div class="form-group">
-										<div class="input-group pull-left">
-											<div class="input-group-addon  success">配货时间</div>
-											<input id="datetimepicker" class="form-control" type="text"
-												value="" readonly> <span class="add-on"><i
-												class="icon-th"></i></span>
-											
-										</div>
-										<span id="total-span" class="pull-right"></span>
+									<div class="form-group" >
+										<div id="datetimepicker" class="input-group date width100">
+                                              <input id="start"
+                                                name="start" class="form-control" type="text"
+                                                  value="" placeholder="请选择..." readonly="readonly"> <span
+                                                  class="input-group-addon"> <span
+                                                  class="glyphicon glyphicon-remove"></span>
+                                              </span> <span class="input-group-addon"> <span
+                                                  class="glyphicon glyphicon-calendar"></span>
+                                              </span>
+                                          </div>
+										<span id="total-span" ></span>
 									</div>
 								</form>
 								
